Refactor AI service: remove ChatClient dependency, implement Gemini API integration for chat and translation, and update configuration for API key and URL.